plugman: Fix leaking attribute string

https://bugzilla.gnome.org/show_bug.cgi?id=743770